# InterpKit

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: cli.md  index.md  quickstart.md
docs/api/: discovery.md  model.md  ops.md
examples/: 01_quickstart.ipynb  02_attention_patterns.ipynb  03_steering_vectors.ipynb  04_sae_features.ipynb  05_caching_and_probing.ipynb  06_model_comparison.ipynb  07_vision_models.ipynb  08_dla_and_circuits.ipynb  09_scan_and_batch.ipynb  10_chat_models.ipynb
interpkit/: __init__.py  __main__.py
interpkit/cli/: main.py
interpkit/core/: cache.py  discovery.py  html.py  inputs.py  loader.py  model.py  plot.py  registry.py  render.py  theme.py  tl_compat.py
interpkit/ops/: ablate.py  activations.py  attention.py  attribute.py  batch.py  circuits.py  diff.py  dla.py  find_circuit.py  heads.py  inspect.py  lens.py  patch.py  probe.py  report.py  sae.py  scan.py  steer.py  trace.py
mechkit/: __init__.py
mechkit/cli/: main.py
mechkit/core/: discovery.py  html.py  model.py  plot.py  registry.py  render.py  tl_compat.py
mechkit/ops/: ablate.py  activations.py  attention.py  attribute.py  diff.py  inspect.py  lens.py  patch.py  probe.py  sae.py  steer.py  trace.py
tests/: conftest.py  test_ablate.py  test_activations.py  test_architectures.py  test_attention.py  test_attribute.py  test_batch_extended.py  test_cache.py  test_chat.py  test_cli.py  test_deep_robustness.py  test_diff.py  test_discovery.py  test_discovery_units.py  test_diverse_architectures.py  test_error_handling.py  test_generalize.py  test_holistic.py  test_html.py  test_inputs.py  test_inspect.py  test_invariants.py  test_lens.py  test_load_params.py  test_loading_deep.py  test_multi_arch.py  test_multimodel.py  test_ops.py  test_param_variants.py  test_patch.py  test_plot_internals.py  test_plots.py  test_probe.py  test_registry.py  test_regressions.py  test_render_internals.py  test_robustness_audit.py  test_sae.py  test_save_artifacts.py  test_steer.py  (+5 more)
