[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "interpkit"
version = "0.2.0"
description = "Mech interp for any HuggingFace model."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Davide Zani" }]
keywords = ["mechanistic-interpretability", "pytorch", "transformers", "mech-interp", "interpretability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.1",
    "transformers>=4.36",
    "safetensors>=0.4",
    "rich>=13.0",
    "typer>=0.9",
    "Pillow>=10.0",
    "matplotlib>=3.8",
    "huggingface-hub>=0.20",
]

[project.optional-dependencies]
vision = [
    "torchvision>=0.16",
]
probe = [
    "scikit-learn>=1.3",
]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.2",
    "scikit-learn>=1.3",
    "torchvision>=0.16",
]

[project.urls]
Homepage = "https://github.com/z4nix/MechKit"
Repository = "https://github.com/z4nix/MechKit"
Issues = "https://github.com/z4nix/MechKit/issues"

[project.scripts]
interpkit = "interpkit.cli.main:app"

[tool.setuptools.packages.find]
include = ["interpkit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 300
