[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "interpkit"
version = "0.3.0"
description = "Mech interp for any HuggingFace model."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Davide Zani" }]
keywords = ["mechanistic-interpretability", "pytorch", "transformers", "mech-interp", "interpretability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.1",
    "transformers>=4.36",
    "safetensors>=0.4",
    "rich>=13.0",
    "rich-gradient>=0.3",
    "typer>=0.9",
    "Pillow>=10.0",
    "matplotlib>=3.8",
    "huggingface-hub>=0.20",
]

[project.optional-dependencies]
vision = [
    "torchvision>=0.16",
]
probe = [
    "scikit-learn>=1.3",
]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.2",
    "pytest-cov>=5.0",
    "scikit-learn>=1.3",
    "torchvision>=0.16",
    "ruff>=0.4",
    "mypy>=1.8",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]

[project.urls]
Homepage = "https://github.com/z4nix/interpkit"
Repository = "https://github.com/z4nix/interpkit"
Issues = "https://github.com/z4nix/interpkit/issues"

[project.scripts]
interpkit = "interpkit.cli.main:app"

[tool.setuptools.packages.find]
include = ["interpkit*"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501", "SIM108", "SIM105", "SIM103", "E741", "B905"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 300

[tool.coverage.run]
source = ["interpkit"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 60
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__",
]
